Refactor convertIntToFizzBuzz